<resources>
    <string name="app_name">Slackr</string>
    <string name="slackr">SLACKR</string>
    <string name="password">Password</string>
    <string name="email"> Email</string>
    <string name="login">Login</string>
    <string name="account_login">Account Login</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="find_match">Find Match</string>
    <string name="find_learning_style">Find Learning Style</string>
    <string name="profile">Profile</string>
    <string name="input_error_name">First Name Required</string>
    <string name="in_order_to_use_your_slackr_account_you_must_verify_your_email">In order to use your Slackr account you must verify your email</string>
    <string name="verify">Verify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips">Tips</string>
    <string name="close">close</string>
    <string name="more_information">More Information</string>
    <string name="group_name">Group Name:</string>
    <string name="name">Name</string>

</resources>