<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/verify_email_img"
        android:layout_width="195dp"
        android:layout_height="177dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="108dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper_plane" />

    <Button
        android:id="@+id/verify"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="122dp"
        android:layout_height="57dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="278dp"
        android:background="@drawable/linear"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_email"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/check_email"
        android:layout_width="219dp"
        android:layout_height="76dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="138dp"
        android:text="@string/in_order_to_use_your_slackr_account_you_must_verify_your_email"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_email_img" />

</androidx.constraintlayout.widget.ConstraintLayout>